# itty-bitty-ai

./: Cargo.toml  README.md  index.html  itty_bitty_ai.js  mise.toml  sw.js
.cargo/: config.toml
.github/workflows/: pages.yml
assets/: sw.js
src/: app.rs  lib.rs  main.rs
src/easy_mark/: easy_mark_editor.rs  easy_mark_highlighter.rs  easy_mark_parser.rs  easy_mark_viewer.rs  mod.rs
src/llama/: embedded_model.rs  mod.rs  model.rs  worker.rs
